fix: close derived and semantic contract gaps